# schedule-project

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  catch_main.cpp  vcpkg.json
.github/workflows/: main.yml
cmake/: Conan.cmake
schedule-gen/: CMakeLists.txt
schedule-gen/include/: GAScheduleGenerator.hpp  SATScheduleGenerator.hpp  ScheduleCommon.h  ScheduleCommon.hpp  ScheduleData.h  ScheduleData.hpp  ScheduleGenerator.h  ScheduleGenerator.hpp  ScheduleResult.h  ScheduleResult.hpp  ScheduleUtils.hpp
schedule-gen/src/: CMakeLists.txt  GAScheduleGenerator.cpp  SATScheduleGenerator.cpp  ScheduleCommon.cpp  ScheduleData.cpp  ScheduleGenerator.cpp  ScheduleResult.cpp  ScheduleUtils.cpp
schedule-gen/test/: CMakeLists.txt  catch_main.cpp  test_schedule_ga.cpp  test_schedule_gen.cpp  test_schedule_utils.cpp
schedule-ui/: .gitignore  CMakeLists.txt  adddisciplinedialog.cpp  adddisciplinedialog.hpp  adddisciplinedialog.ui  chooseclassroomsdelegate.cpp  chooseclassroomsdelegate.hpp  chooseclassroomsdialog.cpp  chooseclassroomsdialog.hpp  chooseclassroomswidget.cpp  chooseclassroomswidget.hpp  chooseitemsdelegate.cpp  chooseitemsdelegate.hpp  chooseitemsdialog.cpp  chooseitemsdialog.hpp  chooseitemssetwidget.cpp  chooseitemssetwidget.hpp  chooseitemssetwidget.ui  chooseitemswidget.cpp  chooseitemswidget.hpp  chooseweekdaydelegate.cpp  chooseweekdaydelegate.hpp  currenttabstrategy.cpp  currenttabstrategy.hpp  disciplinesmodel.cpp  disciplinesmodel.hpp  hierarchicalheaderview.cpp  hierarchicalheaderview.hpp  lessontypestablemodel.cpp  lessontypestablemodel.hpp  main.cpp  mainwindow.cpp  mainwindow.hpp  mainwindow.ui  qcomboboxdelegate.cpp  qcomboboxdelegate.hpp  qspinboxdelegate.cpp  qspinboxdelegate.hpp  qstringsetfilterproxymodel.cpp  qstringsetfilterproxymodel.hpp  (+18 more)
schedule-web/: CMakeLists.txt
schedule-web/cmake/: Conan.cmake
schedule-web/include/: ScheduleDataSerialization.h  ScheduleRequestHandler.h  ScheduleServer.h
schedule-web/src/: CMakeLists.txt  ScheduleDataSerialization.cpp  ScheduleRequestHandler.cpp  ScheduleServer.cpp  main.cpp
schedule-web/test/: CMakeLists.txt  test_schedule_web.cpp
schedule_gen/: CMakeLists.txt
schedule_gen/include/: GAScheduleGenerator.h  ScheduleChromosomes.h  ScheduleCommon.h  ScheduleData.h  ScheduleDataGenerator.h  ScheduleGA.h  ScheduleGenerator.h  ScheduleIndividual.h  ScheduleResult.h  ScheduleUtils.h  ScheduleValidation.h
schedule_gen/src/: GAScheduleGenerator.cpp  ScheduleChromosomes.cpp  ScheduleCommon.cpp  ScheduleData.cpp  ScheduleDataGenerator.cpp  ScheduleGA.cpp  ScheduleGenerator.cpp  ScheduleIndividual.cpp  ScheduleResult.cpp  ScheduleValidation.cpp  main.cpp
schedule_gen/tests/: test_ScheduleChromosomes.cpp  test_ScheduleCommon.cpp  test_ScheduleGen.cpp  test_ScheduleUtils.cpp  test_ScheduleValidation.cpp  test_schedule_chromosomes.cpp  test_schedule_common.cpp  test_schedule_ga.cpp  test_schedule_gen.cpp  test_schedule_utils.cpp
schedule_web/: CMakeLists.txt
schedule_web/include/: ScheduleDataSerialization.h  ScheduleRequestHandler.h  ScheduleServer.h
schedule_web/src/: ScheduleDataSerialization.cpp  ScheduleRequestHandler.cpp  ScheduleServer.cpp  main.cpp
schedule_web/tests/: test_ScheduleWeb.cpp  test_schedule_web.cpp
